<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/top_layout_margin"
        android:layout_marginRight="@dimen/top_layout_margin"
        android:paddingBottom="@dimen/top_layout_padding"
        android:paddingTop="@dimen/top_layout_padding" >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/workouts_normal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_font_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_bottom_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnReset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/reset_button"
            android:contentDescription="@string/app_name"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textSize="@dimen/gorilla_menu_sub" />

        <Button
            android:id="@+id/btnRestore"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/restore_button"
            android:contentDescription="@string/app_name"
            android:text="@string/restore"
            android:textColor="@android:color/white"
            android:textSize="@dimen/gorilla_menu_sub" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:contentDescription="@string/app_name"
        android:src="@color/line_divider" />

    <ListView
        android:id="@+id/resetRestores"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/line_divider"
        android:dividerHeight="@dimen/divider_height"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />

</LinearLayout>