<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutGorilla"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_share_workout_complete_scr"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/list_padding_settings" >

    <LinearLayout
        android:id="@+id/layoutFacebook"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/progress_height"
        android:layout_marginTop="@dimen/workout_detail_list_item_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_width="@dimen/share_icon_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/facebook_icon" />

        <TextView
            android:id="@+id/txtFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/facebook"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_font_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTwitter"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/progress_height"
        android:layout_marginTop="@dimen/workout_detail_list_item_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgTwitter"
            android:layout_width="@dimen/share_icon_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/twitter_icon" />

        <TextView
            android:id="@+id/txtTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lbs_padding_small"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/twitter"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_font_size" />
    </LinearLayout>

</LinearLayout>